[package]
name = "idar"
version = "0.3.0"
edition = "2021"
authors = ["Domenico Cinque <domenico.cinque98@gmail.com>"]
description = "Image deduplication and removal tool"
license = "MIT"
repository = "https://github.com/domenicocinque/idar"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.10"
image = "0.25.5"
image_hasher = "2.0.0"
indicatif = "0.17.9"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
tempfile = "3.14.0"
